--- a/examples/gesture_recognizer/android/settings.gradle
+++ b/examples/gesture_recognizer/android/settings.gradle
@@ -12,5 +12,5 @@ dependencyResolutionManagement {
         mavenCentral()
     }
 }
-rootProject.name = "MP Hand Gesture Recognition"
+rootProject.name = "MP Gesture Recognizer"
 include ':app'
