updated to work with iterations and api

--- a/examples/image_generation/app/src/main/AndroidManifest.xml
+++ b/examples/image_generation/app/src/main/AndroidManifest.xml
@@ -10,6 +10,11 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.ImageGeneration"
         tools:targetApi="31" >
+        <!-- Some devices, like the Pixel 6, may need to actively declare the use of native libs -->
+        <uses-native-library android:name="libOpenCL.so" android:required="false" />
+        <uses-native-library android:name="libOpenCL-car.so" android:required="false"/>
+        <uses-native-library android:name="libOpenCL-pixel.so" android:required="false" />
+
         <activity
             android:name=".MainActivity"
             android:exported="true" >
