--- a/examples/image_generation/app/build.gradle
+++ b/examples/image_generation/app/build.gradle
@@ -45,4 +45,5 @@ dependencies {
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
+    implementation 'com.google.mediapipe:tasks-vision-image-generator:0.10.5'
 }
