--- a/examples/image_generation/android/app/src/main/AndroidManifest.xml
+++ b/examples/image_generation/android/app/src/main/AndroidManifest.xml
@@ -8,6 +8,7 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
+        android:largeHeap="true"
         android:theme="@style/Theme.ImageGeneration"
         tools:targetApi="31" >
         <!-- Some devices, like the Pixel 6, may need to actively declare the use of native libs -->
