added final after writing codelab

--- a/codelabs/image_generation_basic/android/finish/app/build.gradle
+++ b/codelabs/image_generation_basic/android/finish/app/build.gradle
@@ -47,4 +47,5 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
 
     // Step 1 - Add dependency
+    implementation 'com.google.mediapipe:tasks-vision-image-generator:latest.release'
 }
