--- a/examples/image_segmentation/ios/Podfile
+++ b/examples/image_segmentation/ios/Podfile
@@ -5,7 +5,7 @@ target 'ImageSegmenter' do
   # Comment the next line if you don't want to use dynamic frameworks
   use_frameworks!
 
-  pod 'MediaPipeTasksVision', '0.10.8'
+  pod 'MediaPipeTasksVision'
 
   target 'ImageSegmenterTests' do
     inherit! :search_paths
