--- a/examples/audio_classifier/android/app/build.gradle
+++ b/examples/audio_classifier/android/app/build.gradle
@@ -81,5 +81,5 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.0'
 
     // Mediapipe Library
-    implementation 'com.google.mediapipe:tasks-audio:0.10.0'
+    implementation 'com.google.mediapipe:tasks-audio:0.20230731'
 }
