Add comment in gradle.properties.

--- a/examples/llm_inference/android/gradle.properties
+++ b/examples/llm_inference/android/gradle.properties
@@ -22,4 +22,6 @@ kotlin.code.style=official
 # thereby reducing the size of the R class for that library
 android.nonTransitiveRClass=true
 
+# Hugging Face access token, used to access Hugging Face models which need
+# authentication.
 HF_ACCESS_TOKEN=${HF_ACCESS_TOKEN}
