--- a/examples/llm_inference/android/app/src/main/AndroidManifest.xml
+++ b/examples/llm_inference/android/app/src/main/AndroidManifest.xml
@@ -2,6 +2,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
 
+    <uses-permission android:name="android.permission.INTERNET" />
+
     <application
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
@@ -19,7 +21,9 @@
                 <action android:name="android.intent.action.VIEW"/>
                 <category android:name="android.intent.category.DEFAULT"/>
                 <category android:name="android.intent.category.BROWSABLE"/>
-                <data android:scheme="com.google.mediapipe.examples.llminference" android:host="oauth2callback"/>
+                <data
+                    android:scheme="com.google.mediapipe.examples.llminference"
+                    android:host="oauth2callback"/>
             </intent-filter>
         </activity>
 
