--- a/examples/llm_inference/android/app/src/main/AndroidManifest.xml
+++ b/examples/llm_inference/android/app/src/main/AndroidManifest.xml
@@ -22,7 +22,7 @@
                 <category android:name="android.intent.category.DEFAULT"/>
                 <category android:name="android.intent.category.BROWSABLE"/>
                 <data
-                    android:scheme="com.google.mediapipe.examples.llminference"
+                    android:scheme="com.google.mediapipe.examples.llminference.oauth"
                     android:host="oauth2callback"/>
             </intent-filter>
         </activity>
