--- a/examples/llm_inference/android/app/src/main/AndroidManifest.xml
+++ b/examples/llm_inference/android/app/src/main/AndroidManifest.xml
@@ -29,7 +29,7 @@
 
         <activity android:name="com.google.mediapipe.examples.llminference.LoginActivity"
             android:exported="true"
-            android:theme="@style/Theme.AppCompat.Light">
+            android:theme="@style/Theme.LLMInference">
         </activity>
 
         <activity
