Add LicenseAcknowledgmentActivity to ask user to acknowledge license.

--- a/examples/llm_inference/android/app/src/main/AndroidManifest.xml
+++ b/examples/llm_inference/android/app/src/main/AndroidManifest.xml
@@ -32,6 +32,11 @@
             android:theme="@style/Theme.LLMInference">
         </activity>
 
+        <activity android:name="com.google.mediapipe.examples.llminference.LicenseAcknowledgmentActivity"
+            android:exported="true"
+            android:theme="@style/Theme.LLMInference">
+        </activity>
+
         <activity
             android:name="com.google.mediapipe.examples.llminference.MainActivity"
             android:exported="true"
