--- a/examples/object_detection/android-jetpack-compose/gradle/wrapper/gradle-wrapper.properties
+++ b/examples/object_detection/android-jetpack-compose/gradle/wrapper/gradle-wrapper.properties
@@ -1,6 +1,7 @@
-#Sun Jun 18 17:54:27 EET 2023
 distributionBase=GRADLE_USER_HOME
 distributionPath=wrapper/dists
-distributionUrl=https\://services.gradle.org/distributions/gradle-8.0-bin.zip
+distributionUrl=https\://services.gradle.org/distributions/gradle-8.11.1-bin.zip
+networkTimeout=10000
+validateDistributionUrl=true
 zipStoreBase=GRADLE_USER_HOME
 zipStorePath=wrapper/dists
