--- a/examples/language_detector/android/settings.gradle
+++ b/examples/language_detector/android/settings.gradle
@@ -23,6 +23,7 @@ pluginManagement {
 dependencyResolutionManagement {
     repositoriesMode.set(RepositoriesMode.FAIL_ON_PROJECT_REPOS)
     repositories {
+        mavenLocal()
         google()
         mavenCentral()
     }
