--- a/examples/image_segmentation/android/confidence_mask/app/src/main/AndroidManifest.xml
+++ b/examples/image_segmentation/android/confidence_mask/app/src/main/AndroidManifest.xml
@@ -16,8 +16,7 @@
 -->
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:dist="http://schemas.android.com/apk/distribution"
-    xmlns:tools="http://schemas.android.com/tools"
-    package="com.google.mediapipe.examples.imagesegmenter">
+    xmlns:tools="http://schemas.android.com/tools">
 
     <!-- Enable instant app support -->
     <dist:module dist:instant="true" />
