--- a/examples/object_detection/android/app/build.gradle
+++ b/examples/object_detection/android/app/build.gradle
@@ -21,12 +21,14 @@ apply plugin: "androidx.navigation.safeargs"
 apply plugin: 'de.undercouch.download'
 
 android {
-    compileSdkVersion 32
+    compileSdk 34
+    namespace "com.google.mediapipe.examples.objectdetection"
+
     defaultConfig {
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         applicationId "com.google.mediapipe.examples.objectdetection"
-        minSdkVersion 24
-        targetSdkVersion 32
+        minSdk 24
+        targetSdk 34
         versionCode 1
         versionName "1.0.0"
     }
@@ -87,7 +89,7 @@ dependencies {
     implementation "androidx.navigation:navigation-ui-ktx:$nav_version"
 
     // CameraX core library
-    def camerax_version = '1.1.0'
+    def camerax_version = '1.4.2'
     implementation "androidx.camera:camera-core:$camerax_version"
 
     // CameraX Camera2 extensions
@@ -116,5 +118,5 @@ dependencies {
     androidTestImplementation "androidx.test:runner:1.4.0"
     androidTestImplementation "androidx.test.espresso:espresso-core:3.4.0"
 
-    implementation 'com.google.mediapipe:tasks-vision:0.10.26'
+    implementation 'com.google.mediapipe:tasks-vision:0.10.28'
 }
