--- a/examples/object_detection/android/build.gradle
+++ b/examples/object_detection/android/build.gradle
@@ -30,7 +30,7 @@ buildscript {
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
         classpath 'androidx.navigation:navigation-safe-args-gradle-plugin:2.4.1'
         classpath 'de.undercouch:gradle-download-task:4.1.2'
-
+        classpath 'com.android.tools.build:gradle:8.11.0'
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
