--- a/examples/interactive_segmentation/android/build.gradle
+++ b/examples/interactive_segmentation/android/build.gradle
@@ -15,7 +15,8 @@
  */
 buildscript {
     dependencies {
-        classpath 'com.diffplug.spotless:spotless-plugin-gradle:6.7.0'
+        classpath 'androidx.navigation:navigation-safe-args-gradle-plugin:2.8.5'
+        classpath 'com.android.tools.build:gradle:8.11.0'
     }
 }
 plugins {
