--- a/examples/face_landmarker/android/build.gradle
+++ b/examples/face_landmarker/android/build.gradle
@@ -14,6 +14,12 @@
  * limitations under the License.
  */
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
+buildscript {
+    dependencies {
+        classpath 'com.android.tools.build:gradle:8.11.0'
+    }
+}
+
 plugins {
     id 'com.android.application' version '7.3.0' apply false
     id 'com.android.library' version '7.3.0' apply false
