--- a/examples/gesture_recognizer/android/app/build.gradle
+++ b/examples/gesture_recognizer/android/app/build.gradle
@@ -22,12 +22,12 @@ plugins {
 
 android {
     namespace 'com.google.mediapipe.examples.gesturerecognizer'
-    compileSdk 32
+    compileSdk 34
 
     defaultConfig {
         applicationId "com.google.mediapipe.examples.gesturerecognizer"
         minSdk 24
-        targetSdk 32
+        targetSdk 34
         versionCode 1
         versionName "1.0"
 
@@ -75,7 +75,7 @@ dependencies {
     implementation "androidx.navigation:navigation-ui-ktx:$nav_version"
 
     // CameraX core library
-    def camerax_version = '1.2.0-alpha02'
+    def camerax_version = '1.4.2'
     implementation "androidx.camera:camera-core:$camerax_version"
 
     // CameraX Camera2 extensions
@@ -98,5 +98,5 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
 
     // Mediapipe Library
-    implementation 'com.google.mediapipe:tasks-vision:0.10.26'
+    implementation 'com.google.mediapipe:tasks-vision:0.10.28'
 }
