--- a/examples/gesture_recognizer/android/build.gradle
+++ b/examples/gesture_recognizer/android/build.gradle
@@ -15,6 +15,12 @@
  */
 
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
+buildscript {
+    dependencies {
+        classpath 'com.android.tools.build:gradle:8.11.0'
+    }
+}
+
 plugins {
     id 'com.android.application' version '7.3.0' apply false
     id 'com.android.library' version '7.3.0' apply false
