--- a/examples/image_classification/android/app/build.gradle
+++ b/examples/image_classification/android/app/build.gradle
@@ -23,12 +23,13 @@ plugins {
 }
 
 android {
-    compileSdk 32
+    namespace "com.google.mediapipe.examples.imageclassification"
+    compileSdk 34
 
     defaultConfig {
         applicationId "com.google.mediapipe.examples.imageclassification"
         minSdk 24
-        targetSdk 32
+        targetSdk 34
         versionCode 1
         versionName "1.0"
 
@@ -85,7 +86,7 @@ dependencies {
     implementation "androidx.navigation:navigation-ui-ktx:$nav_version"
 
     // CameraX core library
-    def camerax_version = '1.2.0-alpha02'
+    def camerax_version = '1.4.2'
     implementation "androidx.camera:camera-core:$camerax_version"
 
     // CameraX Camera2 extensions
@@ -107,5 +108,5 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
 
-    implementation 'com.google.mediapipe:tasks-vision:0.10.26'
+    implementation 'com.google.mediapipe:tasks-vision:0.10.28'
 }
