--- a/examples/image_embedder/android/build.gradle
+++ b/examples/image_embedder/android/build.gradle
@@ -2,6 +2,7 @@
 buildscript {
     dependencies {
         classpath 'de.undercouch:gradle-download-task:5.3.0'
+        classpath 'com.android.tools.build:gradle:8.11.0'
     }
 }
 plugins {
