--- a/examples/pose_landmarker/android/app/build.gradle
+++ b/examples/pose_landmarker/android/app/build.gradle
@@ -22,12 +22,12 @@ plugins {
 
 android {
     namespace 'com.google.mediapipe.examples.poselandmarker'
-    compileSdk 33
+    compileSdk 34
 
     defaultConfig {
         applicationId "com.google.mediapipe.examples.poselandmarker"
         minSdk 24
-        targetSdk 33
+        targetSdk 34
         versionCode 1
         versionName "1.0"
 
@@ -74,7 +74,7 @@ dependencies {
     implementation "androidx.navigation:navigation-ui-ktx:$nav_version"
 
     // CameraX core library
-    def camerax_version = '1.2.0-alpha02'
+    def camerax_version = '1.4.2'
     implementation "androidx.camera:camera-core:$camerax_version"
 
     // CameraX Camera2 extensions
@@ -97,5 +97,5 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
 
     // MediaPipe Library
-    implementation 'com.google.mediapipe:tasks-vision:0.10.26'
+    implementation 'com.google.mediapipe:tasks-vision:0.10.28'
 }
