--- a/examples/text_classification/android/app/build.gradle
+++ b/examples/text_classification/android/app/build.gradle
@@ -20,12 +20,13 @@ plugins {
 }
 
 android {
-    compileSdk 32
+    namespace "com.google.mediapipe.examples.textclassifier"
+    compileSdk 34
 
     defaultConfig {
         applicationId "com.google.mediapipe.examples.textclassifier"
         minSdk 24
-        targetSdk 32
+        targetSdk 34
         versionCode 1
         versionName "1.0"
 
@@ -70,5 +71,5 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
 
     // MediaPipe Library
-    implementation 'com.google.mediapipe:tasks-text:0.10.26'
+    implementation 'com.google.mediapipe:tasks-text:0.10.28'
 }
