--- a/examples/text_classification/android/build.gradle
+++ b/examples/text_classification/android/build.gradle
@@ -1,8 +1,15 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
+buildscript {
+    dependencies {
+        classpath 'com.android.tools.build:gradle:8.11.0'
+    }
+}
+
 plugins {
     id 'com.android.application' version '7.1.2' apply false
     id 'com.android.library' version '7.1.2' apply false
-    id 'org.jetbrains.kotlin.android' version '1.5.30' apply false
+    id 'org.jetbrains.kotlin.android' version '2.2.20' apply false
+    id("de.undercouch.download") version "5.6.0" apply false
 }
 
 task clean(type: Delete) {
