--- a/examples/interactive_segmentation/android/settings.gradle
+++ b/examples/interactive_segmentation/android/settings.gradle
@@ -4,7 +4,15 @@ pluginManagement {
         mavenCentral()
         gradlePluginPortal()
     }
+    plugins {
+        id 'com.android.application' version '8.12.3' apply false
+        id 'com.android.library' version '8.12.3' apply false
+        id 'org.jetbrains.kotlin.android' version '2.2.20' apply false
+        id 'de.undercouch.download' version '5.6.0' apply false
+
+    }
 }
+
 dependencyResolutionManagement {
     repositoriesMode.set(RepositoriesMode.FAIL_ON_PROJECT_REPOS)
     repositories {
@@ -15,3 +23,4 @@ dependencyResolutionManagement {
 }
 rootProject.name = "Interactive Segmentation"
 include ':app'
+include ':npu'
