--- a/examples/text_embedder/android/build.gradle
+++ b/examples/text_embedder/android/build.gradle
@@ -1,6 +1,7 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 buildscript {
     dependencies {
+        classpath 'com.android.tools.build:gradle:8.11.0'
         classpath 'de.undercouch:gradle-download-task:5.3.0'
     }
 }
